--- a/editor.html
+++ b/editor.html
@@ -108,9 +108,6 @@
   <h1>記事を作成</h1>
   <form id="editorForm">
     <input type="text" id="title" placeholder="タイトルを書く..." required />
-    <input type="text" id="image" placeholder="アイキャッチ画像のURL..." />
-    <textarea id="summary" placeholder="概要文を書く..." rows="3"></textarea>
-    <input type="text" id="url" placeholder="記事のURL（任意）" />
     <textarea id="content" placeholder="本文を書く..." rows="6" required></textarea>
     <select id="status">
       <option value="published">公開する</option>
@@ -129,9 +126,6 @@
   <script>
     const form = document.getElementById("editorForm");
     const titleInput = document.getElementById("title");
-    const imageInput = document.getElementById("image");
-    const summaryInput = document.getElementById("summary");
-    const urlInput = document.getElementById("url");
     const contentInput = document.getElementById("content");
     const statusSelect = document.getElementById("status");
     const saveBtn = document.getElementById("saveBtn");
@@ -152,9 +146,6 @@
     if (editId && articles[editId]) {
       const article = articles[editId];
       titleInput.value = article.title;
-      imageInput.value = article.image || "";
-      summaryInput.value = article.summary || "";
-      urlInput.value = article.url || "";
       contentInput.value = article.content;
       statusSelect.value = article.status || "draft";
       deleteBtn.style.display = "inline-block";
@@ -163,17 +154,15 @@
 
     generateBtn.addEventListener("click", async () => {
       let title = titleInput.value.trim();
-      contentInput.value = "ニュースを検索中...";
+      contentInput.value = "ニュースを取得中...";
 
       try {
-        const res = await fetch("https://news-summarizer.pedehi.workers.dev/api/news");
+        const res = await fetch("https://your-worker-name.workers.dev/api/news");
         const data = await res.json();
         const newsList = Array.isArray(data) ? data : [];
 
-        let matched;
-        if (title) {
-          matched = newsList.find(a => a.title.includes(title) || title.includes(a.title) || a.summary.includes(title));
-        }
+        let matched = newsList.find(n => n.title.includes(title) || title.includes(n.title) || n.summary.includes(title));
+
         if (!matched && newsList.length > 0) {
           matched = newsList[Math.floor(Math.random() * newsList.length)];
           title = matched.title;
@@ -181,9 +170,6 @@
         }
 
         if (matched) {
-          summaryInput.value = matched.summary || '';
-          urlInput.value = matched.url || '';
-          imageInput.value = matched.image || '';
           contentInput.value = `# ${matched.title}\n\n${matched.summary || '要約なし'}\n\n[続きを読む](${matched.url})`;
         } else {
           contentInput.value = "一致するニュース記事が見つかりませんでした。";
@@ -198,9 +184,6 @@
     form.addEventListener("submit", function(e) {
       e.preventDefault();
       const title = titleInput.value.trim();
-      const image = imageInput.value.trim();
-      const summary = summaryInput.value.trim();
-      const url = urlInput.value.trim();
       const content = contentInput.value.trim();
       const status = statusSelect.value;
       if (!title || !content) return alert("すべて入力してね！");
@@ -212,7 +195,7 @@
       const datePublished = oldArticle.datePublished || dateStr;
       const dateUpdated = dateStr;
 
-      articles[id] = { id, title, image, summary, url, content, datePublished, dateUpdated, status };
+      articles[id] = { id, title, content, datePublished, dateUpdated, status };
       localStorage.setItem('articles', JSON.stringify(articles));
 
       alert("保存しました！");
