--- a/article.html
+++ b/article.html
@@ -7,13 +7,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --main-color: #0d47a1; /* indexと同じダークカラー */
-      --accent-color: #3498db; /* indexと同じ明るい青 */
-      --bg-gradient: linear-gradient(135deg, #ecf0f1, #bbdefb); /* indexと同じグラデーション */
+      --main-color: #0d47a1; /* メインカラー */
+      --accent-color: #3498db; /* 明るい青 */
+      --bg-gradient: linear-gradient(135deg, #ecf0f1, #bbdefb); /* グラデーション背景 */
       --card-bg: #ffffff; /* 白背景 */
-      --text-color: #2c3e50; /* indexと同じダークカラー */
+      --text-color: #2c3e50; /* テキストカラー */
       --delete-color: #e74c3c; /* 削除ボタンの赤 */
-      --delete-hover: #c0392b; /* 削除ボタンホバーの赤 */
+      --delete-hover: #c0392b; /* 削除ボタンホバー */
     }
     body {
       font-family: 'Noto Sans JP', sans-serif;
@@ -28,7 +28,8 @@
       background: var(--card-bg);
       padding: 30px;
       border-radius: 12px;
-      box-shadow: 0 6px 12px rgba(0,0,0,0.1); /* 軽いシャドウ */
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1); /* 軽いシャドウ */
+      margin-bottom: 40px;
     }
     h1 {
       font-size: 2.4em;
@@ -46,7 +47,7 @@
     p {
       margin-bottom: 20px;
       white-space: pre-wrap;
-      font-size: 1em;
+      font-size: 1.1em;
       color: var(--text-color); /* ダークカラー */
     }
     #buttons {
